--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
-            android:name=".RecipeDetailsActivity"
+            android:name=".API.RecipeDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".ExploreMeals"
