--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="ExtraText">
+    package="com.example.mealplanner17">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
+
         <activity
             android:name=".MyFavoriteMealsActivity"
             android:exported="false" />
@@ -38,42 +39,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Breakfast.BreakfastActivity">
+        <activity android:name=".Breakfast.BreakfastActivity" />
+        <activity android:name=".Breakfast.BreakfastGenerateActivity" />
+        <activity android:name=".Breakfast.BreakfastFavoriteActivity" />
+        <activity android:name=".LunchFavoriteActivity" />
+        <activity android:name=".LunchGenerateActivity" />
+        <activity android:name=".LunchActivity" />
+        <activity android:name=".DinnerActivity" />
+        <activity android:name=".DinnerGenerateActivity" />
+        <activity android:name=".DinnerFavoriteActivity" />
+        <!-- Add DinnerViewDataActivity here -->
+        <activity android:name=".DinnerViewDataActivity" />
 
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".Breakfast.BreakfastGenerateActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".Breakfast.BreakfastFavoriteActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".LunchFavoriteActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".LunchGenerateActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".LunchActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".DinnerActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".DinnerGenerateActivity">
-
-            <!-- intent filters if any -->
-        </activity>
-        <activity android:name=".DinnerFavoriteActivity">
-
-            <!-- intent filters if any -->
-        </activity>
     </application>
 
 </manifest>
