--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
             android:name=".Breakfast.BreakfastFavoriteActivity">
         </activity>
         <activity
+            android:name=".Breakfast.BreakfastViewDataActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
             android:name=".LunchActivities.LunchFavoriteActivity">
         </activity>
         <activity
