Added dinner side options on recipe page removed orange and cyan colors changed lunch generate spinner to vertical

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".LunchActivities.LunchActivity" />
         <activity android:name=".DinnerActivity" />
         <activity android:name=".DinnerGenerateActivity" />
+        <activity android:name=".DinnerSidesActivity" />
         <activity android:name=".DinnerFavoriteActivity" />
         <activity
             android:name=".DinnerViewDataActivity"
